[project]
name = "twi-hongda-reconciliation-backend"
version = "0.4.0"
description = "宏達停車場對帳系統 - 後端 (FastAPI + MongoDB Atlas + GridFS)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "motor>=3.5",
  "pymongo>=4.6",
  "dnspython>=2.4",
  "openpyxl>=3.1",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mongomock-motor>=0.0.30",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
